--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdcmaF7Vo8+GOwo+X1dQOM",
+      "authorship_tag": "ABX9TyMb8xpmdo1Vf2b5eed8lGrL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "u8Kx2LvtCpV6"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "905BirLmB1eC"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -61,9 +61,9 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "f2f2de35-b4f7-448a-f8c2-19f84acd7226"
+        "outputId": "0906e5a4-552c-4f42-8a43-1ffe61b98813"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d05e4d15-b575-4a5b-a9f2-7b67d8247bc8\">\n",
+              "  <div id=\"df-9377c0ff-b611-4005-b0c2-49d2f2186bb1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d05e4d15-b575-4a5b-a9f2-7b67d8247bc8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9377c0ff-b611-4005-b0c2-49d2f2186bb1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d05e4d15-b575-4a5b-a9f2-7b67d8247bc8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9377c0ff-b611-4005-b0c2-49d2f2186bb1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d05e4d15-b575-4a5b-a9f2-7b67d8247bc8');\n",
+              "          const element = document.querySelector('#df-9377c0ff-b611-4005-b0c2-49d2f2186bb1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -356,9 +356,9 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "139fd569-146a-43b9-fbad-e608d3b2f345"
+        "outputId": "9ecf7e12-7cb8-4f83-8666-3c0121ca7e7d"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8ca7de19-6e03-4e57-a3c3-4a11c89bb917\">\n",
+              "  <div id=\"df-b7fba6e4-cbdb-4440-987a-21324a1724ba\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8ca7de19-6e03-4e57-a3c3-4a11c89bb917')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b7fba6e4-cbdb-4440-987a-21324a1724ba')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8ca7de19-6e03-4e57-a3c3-4a11c89bb917 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b7fba6e4-cbdb-4440-987a-21324a1724ba button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8ca7de19-6e03-4e57-a3c3-4a11c89bb917');\n",
+              "          const element = document.querySelector('#df-b7fba6e4-cbdb-4440-987a-21324a1724ba');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -646,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -661,9 +661,9 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "7fef0bd3-67d9-4094-c430-c0dc9e5cce39"
+        "outputId": "405daafb-e85f-4509-c5a6-9a951979c3f4"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-517ff592-d23c-429d-870e-9de111c4efd8\">\n",
+              "  <div id=\"df-f20d21d7-6972-4203-af24-58f88853cd90\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-517ff592-d23c-429d-870e-9de111c4efd8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f20d21d7-6972-4203-af24-58f88853cd90')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-517ff592-d23c-429d-870e-9de111c4efd8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f20d21d7-6972-4203-af24-58f88853cd90 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-517ff592-d23c-429d-870e-9de111c4efd8');\n",
+              "          const element = document.querySelector('#df-f20d21d7-6972-4203-af24-58f88853cd90');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1093,7 +1093,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -1107,9 +1107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhg1_cazvgj4",
-        "outputId": "3a052a93-9850-45c2-9d42-0d6fd87b85c0"
+        "outputId": "24efeae9-ee0a-4aea-e063-a15898730b77"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1119,7 +1119,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -1130,12 +1130,12 @@
       ],
       "metadata": {
         "id": "_hg4zSqtv2nd",
-        "outputId": "2d2b9766-8ffe-437c-aa96-fc907de8f857",
+        "outputId": "909cf866-8851-4e75-9a73-4581dbd2f641",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -1160,9 +1160,9 @@
           "height": 1000
         },
         "id": "oXgRvBvwZW5d",
-        "outputId": "98836fda-eb83-444e-9579-8707b324844d"
+        "outputId": "0e0ee5c7-41f3-41ca-c6f1-eb34969b77bc"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1270,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-92c17e74-2525-4b9e-8106-15a44e83ed45\">\n",
+              "  <div id=\"df-230c2602-5b08-4a18-92eb-9335ad4673a3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1692,7 +1692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-92c17e74-2525-4b9e-8106-15a44e83ed45')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-230c2602-5b08-4a18-92eb-9335ad4673a3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1743,12 +1743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-92c17e74-2525-4b9e-8106-15a44e83ed45 button.colab-df-convert');\n",
+              "          document.querySelector('#df-230c2602-5b08-4a18-92eb-9335ad4673a3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-92c17e74-2525-4b9e-8106-15a44e83ed45');\n",
+              "          const element = document.querySelector('#df-230c2602-5b08-4a18-92eb-9335ad4673a3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1771,7 +1771,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -1785,9 +1785,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yxkcgDfZoVT",
-        "outputId": "3e239d69-3e1c-4e91-f0be-01b411648f80"
+        "outputId": "99a5b674-95a3-41d3-be10-22ba99fd63e1"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1797,7 +1797,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 300 & neighbourhood == \"Noord-Oost\"').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H-_DZevzhhgt",
+        "outputId": "276e878e-4f66-404e-f435-afb88f55dee7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
