--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMb8xpmdo1Vf2b5eed8lGrL",
+      "authorship_tag": "ABX9TyPh2uA4kss6BUyTEwwl9dxo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "0906e5a4-552c-4f42-8a43-1ffe61b98813"
+        "outputId": "d9db6628-1ca3-47f6-850f-0d28aa9071e0"
       },
       "execution_count": 3,
       "outputs": [
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9377c0ff-b611-4005-b0c2-49d2f2186bb1\">\n",
+              "  <div id=\"df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9377c0ff-b611-4005-b0c2-49d2f2186bb1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9377c0ff-b611-4005-b0c2-49d2f2186bb1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9377c0ff-b611-4005-b0c2-49d2f2186bb1');\n",
+              "          const element = document.querySelector('#df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +356,7 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "9ecf7e12-7cb8-4f83-8666-3c0121ca7e7d"
+        "outputId": "59bf26b9-173b-4105-88b6-64e1c32ab7c4"
       },
       "execution_count": 4,
       "outputs": [
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b7fba6e4-cbdb-4440-987a-21324a1724ba\">\n",
+              "  <div id=\"df-f53691cb-ca58-41f4-beab-396e3d51b467\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b7fba6e4-cbdb-4440-987a-21324a1724ba')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f53691cb-ca58-41f4-beab-396e3d51b467')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b7fba6e4-cbdb-4440-987a-21324a1724ba button.colab-df-convert');\n",
+              "          document.querySelector('#df-f53691cb-ca58-41f4-beab-396e3d51b467 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b7fba6e4-cbdb-4440-987a-21324a1724ba');\n",
+              "          const element = document.querySelector('#df-f53691cb-ca58-41f4-beab-396e3d51b467');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -661,7 +661,7 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "405daafb-e85f-4509-c5a6-9a951979c3f4"
+        "outputId": "50504b4b-accc-4f8f-d288-d1f9d152a8e9"
       },
       "execution_count": 5,
       "outputs": [
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f20d21d7-6972-4203-af24-58f88853cd90\">\n",
+              "  <div id=\"df-5fab572b-3f0c-4776-a932-a75f8755079b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f20d21d7-6972-4203-af24-58f88853cd90')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5fab572b-3f0c-4776-a932-a75f8755079b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f20d21d7-6972-4203-af24-58f88853cd90 button.colab-df-convert');\n",
+              "          document.querySelector('#df-5fab572b-3f0c-4776-a932-a75f8755079b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f20d21d7-6972-4203-af24-58f88853cd90');\n",
+              "          const element = document.querySelector('#df-5fab572b-3f0c-4776-a932-a75f8755079b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1107,7 +1107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhg1_cazvgj4",
-        "outputId": "24efeae9-ee0a-4aea-e063-a15898730b77"
+        "outputId": "fbe244c6-d0c1-46f8-fdae-7742c8ac2ba8"
       },
       "execution_count": 6,
       "outputs": [
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "_hg4zSqtv2nd",
-        "outputId": "909cf866-8851-4e75-9a73-4581dbd2f641",
+        "outputId": "0ebff02a-8fb5-4b7d-ed3d-4bcf9494e3fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1160,7 +1160,7 @@
           "height": 1000
         },
         "id": "oXgRvBvwZW5d",
-        "outputId": "0e0ee5c7-41f3-41ca-c6f1-eb34969b77bc"
+        "outputId": "0fab82d7-d069-4a45-e2ca-8fb8233152db"
       },
       "execution_count": 8,
       "outputs": [
@@ -1270,7 +1270,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-230c2602-5b08-4a18-92eb-9335ad4673a3\">\n",
+              "  <div id=\"df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1692,7 +1692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-230c2602-5b08-4a18-92eb-9335ad4673a3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1743,12 +1743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-230c2602-5b08-4a18-92eb-9335ad4673a3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-230c2602-5b08-4a18-92eb-9335ad4673a3');\n",
+              "          const element = document.querySelector('#df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1785,7 +1785,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yxkcgDfZoVT",
-        "outputId": "99a5b674-95a3-41d3-be10-22ba99fd63e1"
+        "outputId": "9a4fac40-20fb-48fa-aee2-127c2d543c0a"
       },
       "execution_count": 9,
       "outputs": [
@@ -1807,11 +1807,11 @@
         "df.query('price > 300 & neighbourhood == \"Noord-Oost\"').shape"
       ],
       "metadata": {
+        "id": "H-_DZevzhhgt",
+        "outputId": "d1641bb5-e980-4afd-ffa0-7bec3c860d9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "H-_DZevzhhgt",
-        "outputId": "276e878e-4f66-404e-f435-afb88f55dee7"
+        }
       },
       "execution_count": 10,
       "outputs": [
@@ -1824,6 +1824,32 @@
           },
           "metadata": {},
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 400 & neighbourhood == \"Centrum-Oost\"').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gd1mF7bMn9xB",
+        "outputId": "d87e839b-04e2-4d57-934f-4cbc3061e5fc"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(33, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     }
