--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPh2uA4kss6BUyTEwwl9dxo",
+      "authorship_tag": "ABX9TyMgqrXGZjsXqkjkZd4zEuUZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "d9db6628-1ca3-47f6-850f-0d28aa9071e0"
+        "outputId": "1e722182-1b74-4cb2-d05a-791bbda6bbe3"
       },
       "execution_count": 3,
       "outputs": [
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00\">\n",
+              "  <div id=\"df-fd1abd57-8a61-4138-b6b1-394905e5ba0b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd1abd57-8a61-4138-b6b1-394905e5ba0b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fd1abd57-8a61-4138-b6b1-394905e5ba0b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-05cdef39-cf4e-4dc3-8d8a-ee0a07f01d00');\n",
+              "          const element = document.querySelector('#df-fd1abd57-8a61-4138-b6b1-394905e5ba0b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +356,7 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "59bf26b9-173b-4105-88b6-64e1c32ab7c4"
+        "outputId": "a4bba47e-6229-484f-eebc-ec65cdbc324b"
       },
       "execution_count": 4,
       "outputs": [
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f53691cb-ca58-41f4-beab-396e3d51b467\">\n",
+              "  <div id=\"df-32660c31-77cb-4a58-9ef3-5a786b79f439\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f53691cb-ca58-41f4-beab-396e3d51b467')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32660c31-77cb-4a58-9ef3-5a786b79f439')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f53691cb-ca58-41f4-beab-396e3d51b467 button.colab-df-convert');\n",
+              "          document.querySelector('#df-32660c31-77cb-4a58-9ef3-5a786b79f439 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f53691cb-ca58-41f4-beab-396e3d51b467');\n",
+              "          const element = document.querySelector('#df-32660c31-77cb-4a58-9ef3-5a786b79f439');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -661,7 +661,7 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "50504b4b-accc-4f8f-d288-d1f9d152a8e9"
+        "outputId": "f44c4a33-66be-478f-a88e-4c2275f06d75"
       },
       "execution_count": 5,
       "outputs": [
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5fab572b-3f0c-4776-a932-a75f8755079b\">\n",
+              "  <div id=\"df-8c686704-5694-4f62-90ae-551c397d7e0e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5fab572b-3f0c-4776-a932-a75f8755079b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c686704-5694-4f62-90ae-551c397d7e0e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5fab572b-3f0c-4776-a932-a75f8755079b button.colab-df-convert');\n",
+              "          document.querySelector('#df-8c686704-5694-4f62-90ae-551c397d7e0e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5fab572b-3f0c-4776-a932-a75f8755079b');\n",
+              "          const element = document.querySelector('#df-8c686704-5694-4f62-90ae-551c397d7e0e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1107,7 +1107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhg1_cazvgj4",
-        "outputId": "fbe244c6-d0c1-46f8-fdae-7742c8ac2ba8"
+        "outputId": "62b6dab8-02eb-478e-dc23-d36f88dfc578"
       },
       "execution_count": 6,
       "outputs": [
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "_hg4zSqtv2nd",
-        "outputId": "0ebff02a-8fb5-4b7d-ed3d-4bcf9494e3fa",
+        "outputId": "26504ff2-7b0e-4cce-eb48-e062a58a239f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1160,7 +1160,7 @@
           "height": 1000
         },
         "id": "oXgRvBvwZW5d",
-        "outputId": "0fab82d7-d069-4a45-e2ca-8fb8233152db"
+        "outputId": "e72d563d-1b44-40de-b831-e7fa00768aac"
       },
       "execution_count": 8,
       "outputs": [
@@ -1270,7 +1270,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce\">\n",
+              "  <div id=\"df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1692,7 +1692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1743,12 +1743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce button.colab-df-convert');\n",
+              "          document.querySelector('#df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-63cf9bc0-4c2f-4499-af6e-cf8389ecbdce');\n",
+              "          const element = document.querySelector('#df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1785,7 +1785,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yxkcgDfZoVT",
-        "outputId": "9a4fac40-20fb-48fa-aee2-127c2d543c0a"
+        "outputId": "936d022e-a9d8-4bfe-d052-35fa55d80aae"
       },
       "execution_count": 9,
       "outputs": [
@@ -1808,7 +1808,7 @@
       ],
       "metadata": {
         "id": "H-_DZevzhhgt",
-        "outputId": "d1641bb5-e980-4afd-ffa0-7bec3c860d9a",
+        "outputId": "b7bf2a6a-436a-4f7b-983a-b82d628ef76b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1837,9 +1837,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gd1mF7bMn9xB",
-        "outputId": "d87e839b-04e2-4d57-934f-4cbc3061e5fc"
+        "outputId": "e5596558-b163-4417-86fa-d5d071c96793"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1849,7 +1849,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 300 & neighbourhood == \"De Pijp - Rivierenbuurt\"').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NxvYOdPaymCH",
+        "outputId": "ea510ec3-cdf1-499e-8e93-112ebb211279"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(51, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
