--- a/repaso_1.ipynb
+++ b/repaso_1.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgqrXGZjsXqkjkZd4zEuUZ",
+      "authorship_tag": "ABX9TyPzx/bsJl4mvSHXznGnFVvr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
           "height": 617
         },
         "id": "ZoBmIcmrB_NE",
-        "outputId": "1e722182-1b74-4cb2-d05a-791bbda6bbe3"
+        "outputId": "5a335483-c20f-40f5-d434-a644bbc4d233"
       },
       "execution_count": 3,
       "outputs": [
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fd1abd57-8a61-4138-b6b1-394905e5ba0b\">\n",
+              "  <div id=\"df-654366e8-7de3-4ad5-9635-b58bde701bf0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -262,7 +262,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd1abd57-8a61-4138-b6b1-394905e5ba0b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-654366e8-7de3-4ad5-9635-b58bde701bf0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -313,12 +313,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fd1abd57-8a61-4138-b6b1-394905e5ba0b button.colab-df-convert');\n",
+              "          document.querySelector('#df-654366e8-7de3-4ad5-9635-b58bde701bf0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fd1abd57-8a61-4138-b6b1-394905e5ba0b');\n",
+              "          const element = document.querySelector('#df-654366e8-7de3-4ad5-9635-b58bde701bf0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +356,7 @@
           "height": 802
         },
         "id": "RolBX9aVJEZ-",
-        "outputId": "a4bba47e-6229-484f-eebc-ec65cdbc324b"
+        "outputId": "9f762602-d02b-4950-85a6-81f252401a93"
       },
       "execution_count": 4,
       "outputs": [
@@ -392,7 +392,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-32660c31-77cb-4a58-9ef3-5a786b79f439\">\n",
+              "  <div id=\"df-489bf493-90e4-4942-b57e-1a820880caf2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -567,7 +567,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32660c31-77cb-4a58-9ef3-5a786b79f439')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-489bf493-90e4-4942-b57e-1a820880caf2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -618,12 +618,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-32660c31-77cb-4a58-9ef3-5a786b79f439 button.colab-df-convert');\n",
+              "          document.querySelector('#df-489bf493-90e4-4942-b57e-1a820880caf2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-32660c31-77cb-4a58-9ef3-5a786b79f439');\n",
+              "          const element = document.querySelector('#df-489bf493-90e4-4942-b57e-1a820880caf2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -661,7 +661,7 @@
           "height": 1000
         },
         "id": "OL6Y0CsQJRMW",
-        "outputId": "f44c4a33-66be-478f-a88e-4c2275f06d75"
+        "outputId": "8d44eca5-dea6-4a91-b63d-5557321e094f"
       },
       "execution_count": 5,
       "outputs": [
@@ -738,7 +738,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8c686704-5694-4f62-90ae-551c397d7e0e\">\n",
+              "  <div id=\"df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1014,7 +1014,7 @@
               "</table>\n",
               "<p>508 rows × 18 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c686704-5694-4f62-90ae-551c397d7e0e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1065,12 +1065,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8c686704-5694-4f62-90ae-551c397d7e0e button.colab-df-convert');\n",
+              "          document.querySelector('#df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8c686704-5694-4f62-90ae-551c397d7e0e');\n",
+              "          const element = document.querySelector('#df-9fcf1b52-15da-4eca-b23a-57c4ccdf9e42');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1107,7 +1107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhg1_cazvgj4",
-        "outputId": "62b6dab8-02eb-478e-dc23-d36f88dfc578"
+        "outputId": "64a87801-0533-499d-e01c-db65b88d746c"
       },
       "execution_count": 6,
       "outputs": [
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "_hg4zSqtv2nd",
-        "outputId": "26504ff2-7b0e-4cce-eb48-e062a58a239f",
+        "outputId": "3eab7f91-4c52-484c-c40c-ef23b25db096",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1160,7 +1160,7 @@
           "height": 1000
         },
         "id": "oXgRvBvwZW5d",
-        "outputId": "e72d563d-1b44-40de-b831-e7fa00768aac"
+        "outputId": "85f53ae5-2d9a-40c6-efaf-fd473d06e49f"
       },
       "execution_count": 8,
       "outputs": [
@@ -1270,7 +1270,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d\">\n",
+              "  <div id=\"df-a5a5d945-2d81-488b-b0b5-d0bc52a00367\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1692,7 +1692,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5a5d945-2d81-488b-b0b5-d0bc52a00367')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1743,12 +1743,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d button.colab-df-convert');\n",
+              "          document.querySelector('#df-a5a5d945-2d81-488b-b0b5-d0bc52a00367 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1bd8a55f-5a66-43ad-8454-bd903a0bed0d');\n",
+              "          const element = document.querySelector('#df-a5a5d945-2d81-488b-b0b5-d0bc52a00367');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1785,7 +1785,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yxkcgDfZoVT",
-        "outputId": "936d022e-a9d8-4bfe-d052-35fa55d80aae"
+        "outputId": "a7e3230b-9b69-4a4e-8822-1588589ea8dc"
       },
       "execution_count": 9,
       "outputs": [
@@ -1808,7 +1808,7 @@
       ],
       "metadata": {
         "id": "H-_DZevzhhgt",
-        "outputId": "b7bf2a6a-436a-4f7b-983a-b82d628ef76b",
+        "outputId": "0a50ec7c-10e3-4a52-bc08-3f4d209cbeb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1837,7 +1837,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gd1mF7bMn9xB",
-        "outputId": "e5596558-b163-4417-86fa-d5d071c96793"
+        "outputId": "8eb5b8c0-db06-4bdf-e042-c1c92505cb40"
       },
       "execution_count": 11,
       "outputs": [
@@ -1863,9 +1863,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NxvYOdPaymCH",
-        "outputId": "ea510ec3-cdf1-499e-8e93-112ebb211279"
+        "outputId": "03a491c2-d47a-4a01-f532-3607892b5f57"
       },
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1875,7 +1875,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.query('price > 300 & neighbourhood == \"Buitenveldert - Zuidas\"').shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qdeEbEAV2wmK",
+        "outputId": "9d6d566b-916a-4e8f-9cee-442f76769d50"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
